# obsidian-backup-tool

./: .clinerules  .gitignore  README.md  backup_config.ini.example  main.py  obsidian_backup.py  pyproject.toml  test_backup.py
