[project]
name = "obsidian-backup-tool"
version = "0.1.0"
description = "A simple tool to backup Obsidian vaults with version management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = ["ruff"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B"]
ignore = []

[tool.ruff.per-file-ignores]
"test_*.py" = ["B"]
